# fastapi-example-app

./: Dockerfile  README.md  pyproject.toml
ssl/: bundle.pem  cert.crt  key.key  put.json
unit/: config.json
