[tool.poetry]
name = "fastapi-example-app"
version = "0.1.0"
description = ""
authors = ["aapozd <aapozdnyakove@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
